# merfix

./: Cargo.toml  Makefile  README.md  build.rs  cspell.json
.github/workflows/: commit.yml  pr_merge.yml  static.yml
public/: index.html  index.js
src/: lib.rs
web/: README.md  index.html  index.js  merfix.d.ts  merfix.js  merfix_bg.wasm  merfix_bg.wasm.d.ts  package-lock.json  package.json
