[package]
name = "merfix"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg"] }
wasm-bindgen = {  version = "0.2" }

[profile.release]
opt-level = "s" # Optimize for size to keep the Wasm file small
