[package]
name = "merfix"
version = "0.1.75"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/dimitrmo/merfix"
description = "Utility to remove EXIF metadata from images from browser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "tiff"] }
wasm-bindgen = {  version = "0.2" }

[profile.release]
opt-level = "s" # Optimize for size to keep the Wasm file small
